manifests/cluster-addons/external-dns/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-dns
  namespace: external-dns
spec:
  endpointSelector: {}

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: 'technitium-primary.technitium.svc.cluster.local'

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: technitium
            app.kubernetes.io/name: technitium
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY

    - toCIDR:
        - 192.168.50.177/32 # pi
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
